enhance auth and add readme
